test/syc/good/externvar.c
/*
 * Extern variable declaration
 */

extern int x;
