test/syc/bad/redefvar.c
/*
 * Redefinition of 'x'.
 */

int x = 1;
int x = 1;
